--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
            
             <h1 class="p1">MusiqBanq offers <span>ZERO</span> interest <span>LOAN</span> to upcoming artistes and small business owners</h1>
 
-            <div class="mozart-inner">Get yours today with zero<br> <span id="spin"></span></div>
+            <div class="mozart-inner">Get yours today with zero <span id="spin"></span></div>
 
             <a class="signUpButton">Apply Now...</a>
         </div>
