--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="mozart-inner">Get yours today with zero <span id="spin"></span></div>
 
-            <a class="signUpButton" href="https://forms.gle/FwzDNqPJHYDTBLBu9" target="_blank">Apply Now...</a>
+            <a class="signUpButton" href="https://forms.gle/FwzDNqPJHYDTBLBu9">Apply Now...</a>
         </div>
         <div class="z2" data-aos="fade-down-left" data-aos-offset="300"
         data-aos-easing="ease-in-sine" data-aos-delay="50"
