--- a/index.html
+++ b/index.html
@@ -4,31 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MusiQBanQ</title>
+    <link rel="icon" type="image/x-icon" href="/img/headsetmb.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
-  <!--<div id="app">
-    <div class="title">
-      <div class="title-inner">
-        <div class="cafe">
-          <div class="cafe-inner">MusiqBanq offers <span>ZERO</span> interest <span>LOAN</span> to upcoming artistes and small business owners .</div>
-        </div>
-        <div class="mozart">
-          <div class="mozart-inner">Get yours today with zero <span id="spin"></span></div>
-          <a href="/form.html" class="applyBtn">Apply Now...</a>
-        </div>
-        
-      </div>
-      
-    </div>
   
-    <div class="image">
-      <div class="logo">MB</div>
-      <img src='./img/ladingPageImg2.jpg' alt=''>
-    </div>
-  </div>-->
   <div class="landingPageContainer">
     <div class="navBarContainer">
         <div class="logo text-pop-up-bottom ">MusiQBanQ</div>
