added about section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   
   <div class="landingPageContainer">
     <div class="navBarContainer">
-        <div class="logo text-pop-up-bottom ">MusiQBanQ</div>
-        <div>
-           
+        <div class="logo">MusiQBanQ</div>
+        <div class="nav">
+          <a href="/about.html" class="about-us">About-us</a>
+          <a href="/contact.html" class="contact-us">Contact-us</a>
         </div>
     </div>
  
