--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="contact-us-bg">
+        <div class="contact-bg">
+            <div class="social-btn">
+                <div class="btn1">
+                    <div class="facebook"><img src="https://img.icons8.com/ios-filled/25/ffffff/facebook-f.png"/></div>
+                <div class="twitter"><img src="https://img.icons8.com/ios-filled/25/ffffff/twitter.png"/></div>
+                <div class="insta"><img src="https://img.icons8.com/ios-filled/25/ffffff/instagram-new--v1.png"/></div>
+                <div class="linked"><img src="https://img.icons8.com/ios-filled/25/ffffff/linkedin.png"/></div>
+                </div>
+               
+               <div class="btn2">
+                <div class="tiktok"><img src="https://img.icons8.com/ios-filled/25/ffffff/tiktok--v1.png"/></div>
+                <div class="whatsapp">
+                    <img src="https://img.icons8.com/ios-glyphs/25/ffffff/whatsapp.png"/>
+                </div>
+                <div class="telegram">
+                    <img src="https://img.icons8.com/ios-filled/25/ffffff/telegram-app.png"/>
+                </div>
+               </div>
+            </div>
+            <div class="address">
+                <div class="ph">Physical address :</div>
+                <p class="pa">1st floor, Block B Sura shopping complex, Lagos Island, Nigeria</p>
+            </div>
+        </div>
+        <div class="contact-us-header">Contact us</div>
+        <div class="contact-footer"></div>
+    </div>
     
 </body>
 </html>
