adding contact footer

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,10 @@
             </div>
         </div>
         <div class="contact-us-header">Contact us</div>
-        <div class="contact-footer"></div>
+        <div class="contact-footer">
+            <p class="footer-text">A product of Toplevelz Cooperative Multipurpose society.</p>
+            <small class="right">All rights reserved</small>
+        </div>
     </div>
     
 </body>
