--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
         <div class="contact-bg">
             <div class="social-btn">
                 <div class="btn1">
-                    <div class="facebook"><img src="https://img.icons8.com/ios-filled/25/ffffff/facebook-f.png"/></div>
-                <div class="twitter"><img src="https://img.icons8.com/ios-filled/25/ffffff/twitter.png"/></div>
-                <div class="insta"><img src="https://img.icons8.com/ios-filled/25/ffffff/instagram-new--v1.png"/></div>
+                    <div class="facebook"><a href=""><img src="https://img.icons8.com/ios-filled/25/ffffff/facebook-f.png"/></a></div>
+                <div class="twitter"><a href="https://twitter.com/Musiqbanq?s=20&t=wgIJNBklPlVCNksPSW2oEg" target="_blank"><img src="https://img.icons8.com/ios-filled/25/ffffff/twitter.png"/></a></div>
+                <div class="insta"><a href="https://instagram.com/musiqbanq?utm_medium=copy_link" target="_blank"><img src="https://img.icons8.com/ios-filled/25/ffffff/instagram-new--v1.png"/></a></div>
                 <div class="linked"><img src="https://img.icons8.com/ios-filled/25/ffffff/linkedin.png"/></div>
                 </div>
                
