--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </div>
         
     </div>
+    <div class="contact-footer">
+      <p class="footer-text">A Product of Toplevelz Talent Management Company and Creditlink Cooperative Multipurpose society..</p>
+      <small class="right">All rights reserved</small>
+  </div>
 </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
