--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         data-aos-duration="2000"
         data-aos-easing="ease-in-out">Contact us</div>
         <div class="contact-footer">
-            <p class="footer-text">A Product of Toplevelz Talent Management Company and Creditlink Cooperative Multipurpose society..</p>
+            <p class="footer-text">A Product of Toplevelz Talent Management Company and Creditlink Cooperative Multipurpose society.</p>
             <small class="right">All rights reserved</small>
         </div>
     </div>
