changes to about page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           data-aos-easing="ease-in-sine" data-aos-delay="50"
           data-aos-duration="1000">
              
-              <h1 class="p1">MusiqBanq offers <span>ZERO</span> interest <span>LOAN</span> to upcoming artistes and small business owners</h1>
+              <h1 class="p1">MusiqBanq offers <span>ZERO</span> interest <span>LOANS</span> to upcoming artistes and small business owners</h1>
   
               <div class="mozart-inner">Get yours today with zero <span id="spin"></span></div>
   
