--- a/contact.html
+++ b/contact.html
@@ -13,20 +13,18 @@
         <div class="contact-bg">
             <div class="social-btn">
                 <div class="btn1">
-                    <div class="facebook"><a href=""><img src="https://img.icons8.com/ios-filled/25/ffffff/facebook-f.png"/></a></div>
-                <div class="twitter"><a href="https://twitter.com/Musiqbanq?s=20&t=wgIJNBklPlVCNksPSW2oEg" target="_blank"><img src="https://img.icons8.com/ios-filled/25/ffffff/twitter.png"/></a></div>
-                <div class="insta"><a href="https://instagram.com/musiqbanq?utm_medium=copy_link" target="_blank"><img src="https://img.icons8.com/ios-filled/25/ffffff/instagram-new--v1.png"/></a></div>
-                <div class="linked"><img src="https://img.icons8.com/ios-filled/25/ffffff/linkedin.png"/></div>
+                    <div class="facebook"><a href=""><img src="https://img.icons8.com/fluency/25/000000/facebook-new.png"/></a></div>
+                <div class="twitter"><a href="https://twitter.com/Musiqbanq?s=20&t=wgIJNBklPlVCNksPSW2oEg" target="_blank"><img src="https://img.icons8.com/fluency/25/000000/twitter.png"/></a></div>
+                <div class="insta"><a href="https://instagram.com/musiqbanq?utm_medium=copy_link" target="_blank"><img src="https://img.icons8.com/fluency/25/000000/instagram-new.png"/></a></div>
+                <div class="linked"><img src="https://img.icons8.com/fluency/25/000000/linkedin.png"/></div>
                 </div>
                
                <div class="btn2">
-                <div class="tiktok"><img src="https://img.icons8.com/ios-filled/25/ffffff/tiktok--v1.png"/></div>
+                <div class="tiktok"><a href="https://vm.tiktok.com/ZMLrxNdFj/" target="_blank"><img src="https://img.icons8.com/color/25/000000/tiktok--v1.png"/></a></div>
                 <div class="whatsapp">
-                    <img src="https://img.icons8.com/ios-glyphs/25/ffffff/whatsapp.png"/>
+                    <img src="https://img.icons8.com/color/25/000000/whatsapp--v1.png"/>
                 </div>
-                <div class="telegram">
-                    <img src="https://img.icons8.com/ios-filled/25/ffffff/telegram-app.png"/>
-                </div>
+                <div class="telegram"><a href="https://t.me/+7UiPA5FE_F04MGRk" target="_blank"><img src="https://img.icons8.com/color/25/000000/telegram-app--v1.png"/></a></div>
                </div>
             </div>
             <div class="address">
