--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
                
                <div class="btn2">
                 <div class="tiktok"><a href="https://vm.tiktok.com/ZMLrxNdFj/" target="_blank"><img src="https://img.icons8.com/color/25/000000/tiktok--v1.png"/></a></div>
-                <div class="whatsapp">
-                    <img src="https://img.icons8.com/color/25/000000/whatsapp--v1.png"/>
-                </div>
+
+                <div class="whatsapp"><a href="https://wa.me/message/P2DFF6FBOEHAE1" target="_blank"><img src="https://img.icons8.com/color/25/000000/whatsapp--v1.png"/></a></div>
+          
                 <div class="telegram"><a href="https://t.me/+7UiPA5FE_F04MGRk" target="_blank"><img src="https://img.icons8.com/color/25/000000/telegram-app--v1.png"/></a></div>
                </div>
             </div>
