changed text on about and contact

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="contact-footer">
         <p class="footer-text">
-          A Product of Toplevelz Talent Management Company and MusiqBanQ ( ALAUSA ) Cooperative Multipurpose Society Limited.
+          A Product of Toplevelz Talent Management Company and MusiqBanq ( ALAUSA ) Cooperative Multipurpose Society Limited.
         </p>
         <small class="right">All rights reserved</small>
       </div>
