--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             </div>
             <div class="address">
                 <div class="ph">Physical address :</div>
-                <p class="pa">1st floor, Block B Sura shopping complex, Lagos Island, Nigeria</p>
+                <p class="pa">18, Ajoke Okunsanya street, Isolo, Lagos Nigeria.</p>
             </div>
         </div>
         <div class="contact-us-header" data-aos="fade-down-right" data-aos-offset="200"
