added beneficiary section for big screen

--- a/index.html
+++ b/index.html
@@ -52,13 +52,40 @@
           ></div>
         </div>
       </div>
+
+      <div class="beneficiary-container">
+        <div class="illus-container">
+          <img src="/img/3d-flame-red-haired-black-man-with-hand-raised.png" width="" height="" alt="" />
+          <h1>Heres a slideshow of our beneficiaries</h1>
+        </div>
+        <div id="slider">
+          <ul id="slideWrap">
+            <li>
+              <img src="/img/sosa.jpeg" alt="" />
+            </li>
+            <li>
+              <img src="/img/dreez.jpeg" alt="" />
+            </li>
+            <li>
+              <img src="/img/jesse.jpeg" alt="" />
+            </li>
+            <li>
+              <img src="/img/palon.jpeg" alt="" />
+            </li>
+          </ul>
+          <div id="prev"></div>
+          <div id="next"></div>
+        </div>
+      </div>
       <div class="contact-footer">
         <p class="footer-text">
-          A Product of Toplevelz Talent Management Company and MusiqBanq ( ALAUSA ) Cooperative Multipurpose Society Limited.
+          A Product of Toplevelz Talent Management Company and MusiqBanq (
+          ALAUSA ) Cooperative Multipurpose Society Limited.
         </p>
         <small class="right">All rights reserved</small>
       </div>
     </div>
+    <script src="index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
