added beneficiary section for big screen

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="beneficiary-container">
         <div class="illus-container">
           <img src="/img/3d-flame-red-haired-black-man-with-hand-raised.png" width="" height="" alt="" />
-          <h1>Heres a slideshow of our beneficiaries</h1>
+          <h1>Here's a slideshow of our beneficiaries</h1>
         </div>
         <div id="slider">
           <ul id="slideWrap">
