change the footer writeup

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
       </div>
       <div class="contact-footer">
         <p class="footer-text">
-          A Product of Toplevelz Talent Management Company and MusiqBanq (
-          ALAUSA ) Cooperative Multipurpose Society Limited.
+          A Product of Toplevelz Talent Management Company and C. L Linkdegarde Enterprises.
         </p>
         <small class="right">All rights reserved</small>
       </div>
