change the footer writeup

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         data-aos-duration="2000"
         data-aos-easing="ease-in-out">Contact us</div>
         <div class="contact-footer">
-            <p class="footer-text">A Product of Toplevelz Talent Management Company and MusiqBanq ( ALAUSA ) Cooperative Multipurpose Society Limited.</p>
+            <p class="footer-text">A Product of Toplevelz Talent Management Company and C. L Linkdegarde Enterprises.</p>
             <small class="right">All rights reserved</small>
         </div>
     </div>
