added a benefiacry to the slider

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
         <div id="slider">
           <ul id="slideWrap">
             <li>
-              <img src="/img/sosa.jpeg" alt="" />
+              <img src="/img/tmp.jpeg" alt="" />
             </li>
             <li>
               <img src="/img/dreez.jpeg" alt="" />
+            </li>
+            <li>
+              <img src="/img/sosa.jpeg" alt="" />
             </li>
             <li>
               <img src="/img/jesse.jpeg" alt="" />
