--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <div class="body2">
+    <h1>Internal Server Error</h1>
+    <p>This may occur due to the subscription made on the hosting platform.</p>
+    <!-- <div class="body2">
       <div class="landingPageContainer">
         <div class="navBarContainer">
           <div class="logo">MusiQBanQ</div>
@@ -86,7 +88,7 @@
         </p>
         <small class="right">All rights reserved</small>
       </div>
-    </div>
+    </div> -->
     <script src="index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
